some new features

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -48,6 +48,10 @@
 								<p class="ctm-text-light">Click to start a game of Chess!</p>
 							</div>
 							<div id="chess-options" class="h-100 flex-column" style="display: none;">
+								<div id="classic-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Classic</div>
+								<div id="spicy-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Spicy</div>
+							</div>
+							<div id="chess-friend-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
 								<a href="/chess" id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</a>
 							</div>
@@ -55,6 +59,15 @@
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
 								<div id="chess-friends-container" class="mb-3 friends-container"></div>
 								<button id="start-chess-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
+							</div>
+							<div id="chess-variants" class="h-100 flex-column" style="display: none;">
+								<div id="duck-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
+									Duck
+									<i class="fas fa-question-circle ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="cuack"></i>
+
+								</div>
+								<div id="kirby-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Kirby</div>
+								<div id="bomb-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">The Bomb</div>
 							</div>
 						</div>
 					</div>
