some new features

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -64,10 +64,10 @@
 								<div id="duck-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
 									Duck
 									<i class="fas fa-question-circle ms-2" data-bs-toggle="tooltip" data-bs-placement="top" title="cuack"></i>
-
 								</div>
 								<div id="kirby-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Kirby</div>
 								<div id="bomb-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">The Bomb</div>
+								<div id="960-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">960</div>
 							</div>
 						</div>
 					</div>
