--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -20,7 +20,7 @@
     </div>
     <div id="alpha-coord-bottom" class="row w-100 ms-0"></div>
   </div>
-  <div id="chess-col" class="d-flex flex-column h-100 ms-4">
+  <div id="chess-side-container" class="d-flex flex-column ms-4">
       <div id="move-logger" class="flex-grow-1">
           <div class="d-flex p-4 justify-content-center">
               <div id="leftCol" class="col ms-3"></div>
@@ -28,19 +28,19 @@
           </div>
       </div>
       <!-- Nueva sección para los botones -->
-      <div id="button-container" class="d-flex justify-content-center mt-3">
-          <button id="button1" class="btn btn-secondary mx-2" title="Settings">
-              <img src="components/chess/Assets/icons/settings_icon.png" alt="Button 1 Image" class="button-image">
+      <div id="button-container" class="d-flex justify-content-center my-3">
+          <button id="button1" class="btn ctm-btn-dark mx-2" title="Settings">
+            <i class="bi bi-gear button-image" alt="Button 1 Image"></i>
           </button>
-          <button id="button2" class="btn btn-secondary mx-2" title="Resign">
-              <img src="components/chess/Assets/icons/flag_icon.png" alt="Button 2 Image" class="button-image">
+          <button id="button2" class="btn ctm-btn-danger mx-2" title="Resign">
+              <i class="bi bi-flag button-image" alt="Button 2 Image"></i>
           </button>
       </div>
   </div>
     
   <!-- Panel de configuración -->
-  <div id="settings-panel" class="settings-panel hidden">
-    <h3>Customize Your Chess Game</h3>
+  <div id="settings-panel" class="settings-panel hidden"> <!-- blinking-neon-frame -->
+    <h3 class="ctm-text-title"> Customize Your Chess Game</h3>
     <div class="option">
       <label for="piece-style">Piece Style:</label>
       <select id="piece-style">
@@ -58,8 +58,8 @@
         <option value=white:#687182;black:#232a36>Glass</option>
       </select>
     </div>
-    <button id="save-settings" class="btn btn-primary">Save</button>
-    <button id="cancel-settings" class="btn btn-secondary">Cancel</button>
+    <button id="save-settings" class="btn ctm-btn">Save</button>
+    <button id="cancel-settings" class="btn ctm-btn-secondary">Cancel</button>
   </div>
 
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
