--- a/frontend/service/components/chat/test.html
+++ b/frontend/service/components/chat/test.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">   
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"> -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../styles.css">
 	<style>
 		.game-invitation .card-title, .game-invitation .card-text {
 			background-color: var(--medium);
@@ -35,7 +35,7 @@
             <div id="chat-window">
                 <div class="p-2 back-to-recents list-group-item">
                     <i class="fas fa-arrow-left p-2"></i>
-                    <span id="current-chat-name"></span>
+                    <span id="current-chat-name">jariza-o</span>
                 </div>
                 <div id="chat-messages" class="p-3">
 					
@@ -56,7 +56,7 @@
 					  </div>
 
                 </div>
-                <form id="chat-form" class="p-2 border-top">
+                <form id="chat-form" class="p-2">
                     <div class="input-group">
                         <input type="text" id="message-input" class="form-control" placeholder="Type a message">
                         <button type="submit" id="send-btn" class="btn">
