--- a/frontend/service/components/start-game/styles.css
+++ b/frontend/service/components/start-game/styles.css
@@ -56,14 +56,18 @@ img {
     z-index: 50;
   }
   
-.tooltip-inner {
-    background-color: #ffffff !important; /* Background color */
-    color: #ff0000 !important; /* Text color */
-    font-size: 14px !important; /* Font size */
-    padding: 5px 10px !important; /* Padding */
-    border-radius: 5px !important; /* Border radius */
+  .tooltip-inner {
+    background-color: var(--dark);
+    color: var(--light);
+    padding: 5px 10px;
+    border-radius: 5px;
 }
 
 .tooltip-arrow {
-    border-top-color: #333 !important; /* Arrow color */
+    border-top-color: var(--dark);
+}
+
+
+#chess-variants .fas.fa-question-circle {
+    font-size: 1.5em;
 }
