some responsiveness updates

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -63,8 +63,8 @@
 							<div id="chess-variants" class="h-100 flex-column" style="display: none;">
 								<div id="duck-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
 									<div class="container d-flex w-75">
-										Duck
-										<i class="fas fa-question-circle ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="The duck is a brick - pieces cannot move through the square occupied by the duck. However, knights can jump over the duck. Each player’s turn has 2 steps: After moving a piece, the duck must be moved to a different and empty square."></i>
+										Horde
+										<i class="fas fa-question-circle ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="meaw"></i>
 									</div>
 								</div>
 								<div id="kirby-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
