--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -11,34 +11,35 @@
 </head>
 <body class="d-flex mt-4"> -->
   <!-- Contenedor principal donde se renderizará el tablero de ajedrez y otros elementos del juego -->
-  <div id="chess-container">
-    <div id="alpha-coord" class="row w-100 ms-0"></div>
-    <div class="d-flex">
-      <div id="num-coord" class="d-flex flex-column"></div>
-      <div id="root"> </div>
-      <div id="num-coord-right" class="d-flex flex-column"></div>
-    </div>
-    <div id="alpha-coord-bottom" class="row w-100 ms-0"></div>
-  </div>
-  <div id="chess-side-container" class="d-flex flex-column ms-4">
-      <div id="move-logger" class="flex-grow-1">
-          <div class="d-flex p-4 justify-content-center">
-              <div id="leftCol" class="col ms-3"></div>
-              <div id="rightCol" class="col ms-5"></div>
-          </div>
+   <div class="d-flex flex-column flex-md-row"> <!-- with this, side content is pushed under the chess on narrow screens -->
+      <div id="chess-container">
+        <div id="alpha-coord" class="row w-100 ms-0"></div>
+        <div id="grid-container" class="d-flex">
+          <div id="num-coord" class="d-flex flex-column"></div>
+          <div id="root"> </div>
+          <div id="num-coord-right" class="d-flex flex-column"></div>
+        </div>
+        <div id="alpha-coord-bottom" class="row w-100 ms-0"></div>
       </div>
-      <!-- Nueva sección para los botones -->
-      <div id="button-container" class="d-flex justify-content-center my-3">
+      <div id="chess-side-container" class="d-flex flex-column ms-4 align-items-center">
+        <div id="move-logger" class="flex-grow-1">
+          <div class="d-flex p-4 justify-content-center">
+            <div id="leftCol" class="col ms-3"></div>
+            <div id="rightCol" class="col ms-5"></div>
+          </div>
+        </div>
+        <!-- Nueva sección para los botones -->
+        <div id="button-container" class="d-flex justify-content-center my-3">
           <button id="button1" class="btn ctm-btn-dark mx-2" title="Settings">
             <i class="bi bi-gear button-image" alt="Button 1 Image"></i>
           </button>
           <button id="button2" class="btn ctm-btn-danger mx-2" title="Resign">
-              <i class="bi bi-flag button-image" alt="Button 2 Image"></i>
+            <i class="bi bi-flag button-image" alt="Button 2 Image"></i>
           </button>
-      </div>
-  </div>
-    
-  <!-- Panel de configuración -->
+        </div>
+      </div>    
+    </div>
+    <!-- Panel de configuración -->
   <div id="settings-panel" class="settings-panel hidden"> <!-- blinking-neon-frame -->
     <h3 class="ctm-text-title"> Customize Your Chess Game</h3>
     <div class="option">
