--- a/frontend/service/components/chess/styles.css
+++ b/frontend/service/components/chess/styles.css
@@ -42,6 +42,7 @@
   width: 100%;
   height: 100% !important;
   cursor: pointer; /*grab?*/
+
 }
 
 .button-image {
@@ -158,8 +159,9 @@
 #move-logger{
   width: 20vw;
   max-width: 300px;
+  min-width: 200px !important;
   height: 628px; /*80px (square) x 8 nº*/
-  max-height: 640px;
+/*   max-height: 640px; */
   overflow-y: auto; /*scroll*/
   color: var(--light);
   margin: 10px;
@@ -183,6 +185,49 @@
   width: 40px;
   padding-top: 24px;
 }
+
+@media (max-width: 770px) { /* resizes move-logger when the screen width is less than 770px */
+  #move-logger {
+    width: 90vw;
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 770px) {
+  .square {
+    height: 40px;
+    width: 40px;
+  }
+
+  .highlight {
+    height: 15px;
+    width: 15px;
+    margin-top: 13px;
+
+  }
+
+  .tile-x, .tile-y {
+    display: none;
+  }
+
+  #alpha-coord, #alpha-coord-bottom, 
+  #num-coord-right, #num-coord-left, .empty-tile {
+    display: none;
+  }
+
+  #chess-side-container {
+    margin-top: 20px;
+    margin-left: 0px !important;
+  }
+  #grid-container, #chess-container {
+    /* max-width: 340px !important; */
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
 
 #chess-container {
   /* background-color: var(--dark); */
