--- a/frontend/service/components/chess/styles.css
+++ b/frontend/service/components/chess/styles.css
@@ -28,6 +28,8 @@
   width: 80px;
   height: 80px;
   position: relative;
+/*   justify-content: center;
+  align-items: center; */
 }
 
 .white{
@@ -42,7 +44,6 @@
   width: 100%;
   height: 100% !important;
   cursor: pointer; /*grab?*/
-
 }
 
 .button-image {
@@ -58,6 +59,16 @@
 
 .highlightYellow{
   background: var(--accent);
+}
+.black.square.highlightYellow{
+  background: var(--dark);
+}
+
+.highlightYellow .piece {
+ height: 106% !important;
+ width: 106% !important;
+ margin-top: -6% !important;
+ margin-left: -3% !important;
 }
 
 .highlight{
