small chess style fix

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -55,7 +55,7 @@
       <select id="board-color">
         <option value=white:#84cca3;black:#5c3973>Green</option>
         <option value=white:#edd6b0;black:#b88762>Brown</option>
-        <option value=white:#ffffff;black:#000000>Black</option>
+        <option value=white:#ffffff;black:#2e2e2e>Black</option>
         <option value=white:#687182;black:#232a36>Glass</option>
       </select>
     </div>
