horde done dirtly

--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -61,10 +61,10 @@
 								<button id="start-chess-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
 							</div>
 							<div id="chess-variants" class="h-100 flex-column" style="display: none;">
-								<div id="duck-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
+								<div id="horde-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
 									<div class="container d-flex w-75">
 										Horde
-										<i class="fas fa-question-circle ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="meaw"></i>
+										<i class="fas fa-question-circle ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="White has a horde of pawns and wins by checkmating Black. Black wins by taking all of White's pawns (and promoted pieces). Pawns can jump 2 squares from the first and second ranks."></i>
 									</div>
 								</div>
 								<div id="kirby-chess" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">
