--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -1,18 +1,71 @@
 <div class="d-flex flex-column">
-    <!-- gif -->
-    <div class="neon-frame p-3">
-        <div class="ctm-card p-5 d-flex flex-row">
-            <div class="col d-flex flex-column">
-                <h1 class="ctm-text-title">ft_transcendence</h1>
-                <h3 class="ctm-text-light mb-5">Welcome, huuman</h3>
-                <h4 class="ctm-text-light mt-auto" id="neon-text">please, log in to start playing</h4>
-            </div>
-            <div class="col">
-                <div class="tv mx-4 position-relative">
-                    <canvas id="greeting-bot"></canvas>
-                    <canvas id="greeting-light"></canvas>
+    <div class="greeting-page">
+        <div class="neon-frame p-3">
+            <div class="ctm-card p-5 d-flex flex-row">
+                <div class="col d-flex flex-column">
+                    <h1 class="ctm-text-title">ft_transcendence</h1>
+                    <h3 class="ctm-text-light mb-5">Welcome, huuman</h3>
+                    <h4 class="ctm-text-light mt-auto" id="neon-text">please, log in to start playing</h4>
+                </div>
+                <div class="col">
+                    <!-- greetings card -->
+                    <div class="tv mx-4 position-relative">
+                        <canvas id="greeting-bot"></canvas>
+                        <canvas id="greeting-light"></canvas>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Scroll message -->
+    <div class="scroll-message text-center mt-5">
+        <p class="ctm-text-light">Scroll to see a quick resume</p>
+        <div class="arrow-down">
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </div>
+    <!-- Resume section -->
+<!-- <div class="resume-section mt-5">
+    <div class="neon-frame p-3">
+        <div class="ctm-card p-5 d-flex flex-row">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <div class="w-100">
+                        <img src="../../resources/assets/chat.png" class="d-block" alt="chat">
+                        <div class="ctm-text-light">chat with your friends</div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="w-100">
+                        <img src="../../resources/assets/home.gif" class="d-block" alt="chat">
+                        <div class="ctm-text-light">choose between playing chess or pong</div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <div class="w-100">
+                        <img src="../../resources/assets/profile.gif" alt="customize" class="img-fluid">
+                        <div class="ctm-text-light">Customize your own profile</div>
+                    </div> 
+                  </div>
+                </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+        </div>
+    </div>
 </div>
+
+ -->
