--- a/frontend/service/components/index/styles.css
+++ b/frontend/service/components/index/styles.css
@@ -53,3 +53,36 @@
     
 }
 
+.scroll-message {
+    position: relative;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 1.2rem;
+    color: var(--light);
+}
+
+.arrow-down {
+    font-size: 2rem;
+    animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-10px);
+    }
+    60% {
+        transform: translateY(-5px);
+    }
+}
+
+.resume-section {
+    height: calc(100vh - 50px);
+}
+
+.greeting-page {
+    height: calc(100vh - 300px);
+}
