flipboard button done, only some adjustment nedded

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -33,8 +33,11 @@
           <button id="button1" class="btn ctm-btn-dark mx-2" title="Settings">
             <i class="bi bi-gear button-image" alt="Button 1 Image"></i>
           </button>
+          <button id="button3" class="btn ctm-btn-danger mx-2" title="Flip Board">
+            <i class="bi bi-arrow-down-up button-image" alt="Button 3 Image"></i>
+          </button>
           <button id="button2" class="btn ctm-btn-danger mx-2" title="Resign">
-            <i class="bi bi-flag button-image" alt="Button 2 Image"></i>
+            <i class="bi bi-flag-fill button-image" alt="Button 2 Image"></i>
           </button>
         </div>
       </div>    
