--- a/frontend/service/components/index/styles.css
+++ b/frontend/service/components/index/styles.css
@@ -20,13 +20,13 @@
     height: 200vh;
     background: transparent url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
     background-repeat: repeat;
-    animation: bg-animation 0.2s infinite;
-    opacity: 0.9;
+    animation: white-noise 0.2s infinite;
+    opacity: 1;
     visibility: visible;
     z-index: 1; /* Ensure the noise effect is on top */
 }
 
-@keyframes bg-animation {
+@keyframes white-noise {
     0% { transform: translate(0,0); }
     10% { transform: translate(-5%,-5%); }
     20% { transform: translate(-10%,5%); }
@@ -66,6 +66,9 @@
     font-size: 2rem;
     animation: bounce 2s infinite;
 }
+#scroll-arrow {
+    cursor: pointer;
+}
 
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
@@ -79,10 +82,59 @@
     }
 }
 
-.resume-section {
-    height: calc(100vh - 50px);
+/* .resume-section {
+    min-height: calc(100vh - 100px);
+    padding: 5rem 0;
+  } */
+  
+  .resume-card--right,
+  .resume-card--left {
+    padding: 3rem;
+    margin-bottom: 3rem;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    width: 100%;
+  }
+  
+  .resume-card--right {
+    background: linear-gradient(to right, rgba(25, 10, 36, 0.1), rgba(25, 10, 36, 0.8));
+  }
+  
+  .resume-card--left {
+    background: linear-gradient(to left, rgba(25, 10, 36, 0.1), rgba(25, 10, 36, 0.8));
+  }
+  
+  .resume-card--right:hover,
+  .resume-card--left:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  }
+
+
+
+.resume-section img:hover {
+    transform: scale(120%);
+    box-shadow: 0 10px 20px var(--lorange);
 }
 
-.greeting-page {
+  .ctm-text-title {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  .ctm-text-light {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  @media (max-width: 768px) {
+    .resume-card--right,
+    .resume-card--left {
+      background: linear-gradient(to bottom, rgba(25, 10, 36, 0.1), rgba(25, 10, 36, 0.8));
+    }
+  }
+  
+  .greeting-page {
     height: calc(100vh - 300px);
-}
+  }
+  
