index page working nice

--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -5,7 +5,9 @@
               <div class="col d-flex flex-column">
                   <h1 class="ctm-text-title">ft_transcendence</h1>
                   <h3 class="ctm-text-light mb-5">Welcome, huuman</h3>
-                  <h4 class="ctm-text-light mt-auto" id="neon-text">please, log in to start playing</h4>
+                  <h4 class="ctm-text-light mt-auto" id="neon-text">
+                    <a href="/login" class="nav-link ctm-link">please, log in to start playing</a>
+                  </h4>
               </div>
               <div class="col">
                   <!-- greetings card -->
