--- a/frontend/service/styles.css
+++ b/frontend/service/styles.css
@@ -186,7 +186,8 @@ body::before {
 }
 
 
-input:focus, select:focus, .ctm-btn:focus, .ctm-btn-dark:focus {
+input:focus, select:focus, .ctm-btn:focus, .ctm-btn-secondary:focus, 
+.ctm-btn-danger:focus, .ctm-btn-dark:focus {
     border-color: var(--light) !important; 
     box-shadow: 0 0 5px var(--light) !important;
     outline: none !important
