another small fix

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -64,8 +64,10 @@
         <option value=white:#687182;black:#232a36>Glass</option>
       </select>
     </div>
-    <button id="save-settings" class="btn ctm-btn">Save</button>
-    <button id="cancel-settings" class="btn ctm-btn-secondary">Cancel</button>
+    <div id="settings-panel-btns">
+      <button id="save-settings" class="btn ctm-btn">Save</button>
+      <button id="cancel-settings" class="btn ctm-btn-secondary">Cancel</button>
+    </div>
   </div>
 
   <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
