a small but super cute update

--- a/frontend/service/styles.css
+++ b/frontend/service/styles.css
@@ -5,7 +5,7 @@
 	--darkish: #462A56;
 	--medium: #5C3973;
 	--accent: #00F56A;
-	--light: rgb(132, 204, 163);
+	--light: #84cca3;
 	--title: #F59C00;
 	--lorange: #f1c478;
     --transition: #a90808;
