--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -44,7 +44,7 @@
 						<div class="card-body text-center d-flex flex-column">
 							<h3 class="ctm-text-title mb-3">Play Chess</h3>
 							<div id="play-chess">
-								<img src="../../resources/chess.png" alt="Play Chess" class="img-fluid rounded mb-3">
+								<img src="../../resources/assets/chess.png" alt="Play Chess" class="img-fluid rounded mb-3">
 								<p class="ctm-text-light">Click to start a game of Chess!</p>
 							</div>
 							<div id="chess-options" class="h-100 flex-column" style="display: none;">
