--- a/frontend/service/components/start-game/start-game.html
+++ b/frontend/service/components/start-game/start-game.html
@@ -31,8 +31,7 @@
 								<button id="start-game-with-friend" class="btn ctm-btn mb-3" disabled>Start Game with Friend</button>
 							</div>
 							<div id="tournament-options" class="h-100 flex-column" style="display: none;">
-								<a href="/ongoing-tournaments" id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Ongoing Tournaments</a>
-								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">New Tournament</div>
+								<div id="ongoing-tournaments" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center" onclick="navigateTo()">Ongoing Tournaments</div>								<div id="new-tournament" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">New Tournament</div>
 							</div>
 						</div>
 					</div>
@@ -53,7 +52,7 @@
 							</div>
 							<div id="chess-friend-options" class="h-100 flex-column" style="display: none;">
 								<div id="chess-friend" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with a friend</div>
-								<a href="/chess" id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</a>
+								<div id="chess-random" class="btn ctm-btn mb-3 flex-grow-1 d-flex align-items-center justify-content-center">Play with any friend</a>
 							</div>
 							<div id="chess-friend-list" class="h-100 flex-column" style="display: none;">
 								<h5 class="ctm-text-light mb-3">Select a friend to play with:</h5>
