--- a/frontend/service/components/profile/profile.html
+++ b/frontend/service/components/profile/profile.html
@@ -77,22 +77,25 @@
         </div>
     </section>  
 </div>
+
 <!-- delete profile modal -->
 <div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title ctm-text-title" id="delete-modal-label">Delete Profile</h5>
-          <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title ctm-text-title" id="delete-profile-modal-label">Delete Profile</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h5>Are you sure you want to delete your profile?</h5>
+                <p>This action can't be reverted.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn ctm-btn-danger">Delete</button>
+            </div>
         </div>
-         <div class="modal-body">
-            <h5>Are you sure you want to delete your profile?</h5>
-            <p>This action can't be reverted.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn ctm-btn-danger">Delete</button>
-        </div>
-      </div>
     </div>
-  </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
