--- a/frontend/service/components/sidebar/sidebar.html
+++ b/frontend/service/components/sidebar/sidebar.html
@@ -5,6 +5,7 @@
 			<li class="nav-item"><a href="/profile" class="nav-link ctm-link">My Profile</a></li>
 			<li class="nav-item"><a href="/friends" class="nav-link ctm-link">Friends</a></li>
 			<li class="nav-item"><a href="/game-stats" class="nav-link ctm-link">Game Stats</a></li>
+			<li class="nav-item"><a href="/settings" class="nav-link ctm-link">Settings</a></li>
 			<!-- <li class="nav-item"><a href="#" class="nav-link ctm-link">Whenever</a></li>
 			<li class="nav-item"><a href="#" class="nav-link ctm-link">Wherever</a></li>
 			<li class="nav-item"><a href="#" class="nav-link ctm-link">Were meant</a></li>
