still  with settings page

--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -23,9 +23,9 @@
                         </div>
                     </div>
                     <div id="change-password-form" class="collapse mt-2">
-                        <input type="password" class="form-control mb-2" placeholder="Actual Password">
-                        <input type="password" class="form-control mb-2" placeholder="New Password">
-                        <input type="password" class="form-control mb-2" placeholder="Confirm Password">
+                        <input type="password" class="form-control ctm-form mb-2" placeholder="Actual Password">
+                        <input type="password" class="form-control ctm-form mb-2 mb-2" placeholder="New Password">
+                        <input type="password" class="form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
                         <div class="d-flex justify-content-center">
                             <button type="submit" class="btn ctm-btn mt-2">Change Password</button>
                         </div>
