--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -8,7 +8,7 @@
             <section class="d-flex flex-column w-75 mx-auto"> <!-- security section -->
                 <h5 class="ctm-text-title text-center">Security</h5>        
                 <div class="form-group d-flex justify-content-between align-items-center resume-card resume-card--right mb-0">
-                    <label for="2fa-toggle" class="flex-grow-1">Enable/Disable 2FA</label>
+                    <label id="2fa-status" for="2fa-toggle" class="flex-grow-1"></label>
                     <div class="form-check form-switch">
                         <input class="form-check-input" type="checkbox" id="2fa-toggle">
                         <label class="form-check-label" for="2fa-toggle"></label>
@@ -35,8 +35,8 @@
             <section class="d-flex flex-column w-75 mx-auto"> <!-- profile section -->
                 <h5 class="ctm-text-title text-center">Profile</h5>        
                 <div class="form-group d-flex justify-content-between align-items-center resume-card resume-card--right mb-0">
-                    <label for="edit-profile-toggle" class="flex-grow-1">Edit profile</label>
-                    <div class="btn ctm-btn">
+                    <div class="flex-grow-1">Edit profile</div>
+                    <div id="edit-profile-pencil" class="btn ctm-btn">
                         <i class="fas fa-pencil-alt"></i>
                     </div>
                 </div>
