small fix again

--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -51,7 +51,7 @@
             </section>
             <section class="d-flex flex-column w-75 mx-auto"> <!-- blocked users section -->
                 <h5 class="ctm-text-title text-center">Blocked users</h5>        
-                <div class="form-group resume-card resume-card--left mt-0">
+                <div class="form-group resume-card resume-card--right mt-0">
                     <div class="d-flex justify-content-between align-items-center">
                         <label for="blocked-users-toggle" class="flex-grow-1">Show blocked users</label>
                         <div class="form-check form-switch">
