added new assets, sound effects to the chess, background music wip

--- a/frontend/service/components/chess/chess.html
+++ b/frontend/service/components/chess/chess.html
@@ -53,6 +53,9 @@
         <option value="Modern">Modern</option>
         <option value="Classic">Classic</option>
         <option value="Club">Club</option>
+        <option value="Luca">Luca</option>
+        <option value="Newspaper">Newspaper</option>
+        <option value="Valentin">Valentin</option>
       </select>
     </div>
     <div class="option">
@@ -62,6 +65,7 @@
         <option value=white:#edd6b0;black:#b88762>Brown</option>
         <option value=white:#ffffff;black:#2e2e2e>Black</option>
         <option value=white:#687182;black:#232a36>Glass</option>
+        <option value=white:#f1fbff;black:#f1a3a7>Valentin</option>
       </select>
     </div>
     <div id="settings-panel-btns">
