--- a/frontend/service/components/settings/settings.html
+++ b/frontend/service/components/settings/settings.html
@@ -1,108 +1,77 @@
-<!-- pendiente comprobar verticalwrapp -->
-<!-- pendiente comprobar verticalwrapp -->
-<div id="settings-container" class="blinking-neon-frame w-50">
-    <div class="card ctm-card ctm-text-light d-flex flex-column">
-        <button id="cancel-changes" class="btn cancel-btn position-absolute top-0 end-0 m-2" style="display:none;">x</button>
-        <div class="card-body justify-content-center">
-            <h2 class="card-title text-center mb-4 ctm-text-title">Settings</h2>
-            <section class="d-flex flex-column w-75 mx-auto"> <!-- security section -->
-                <h5 class="ctm-text-title text-center">Security</h5>        
-                <div class="form-group d-flex justify-content-between align-items-center resume-card resume-card--right mb-0">
-                    <label id="2fa-status" for="2fa-toggle" class="flex-grow-1"></label>
-                    <div class="form-check form-switch">
-                        <input class="form-check-input" type="checkbox" id="2fa-toggle">
-                        <label class="form-check-label" for="2fa-toggle"></label>
-                    </div>
+<div id="settings-container" class="blinking-neon-frame">
+    <div class="card ctm-card p-4">
+        <h2 class="text-center ctm-text-title">Settings</h2>
+        <div class="list-group list-group-flush">
+            <!-- 2FA -->
+            <div class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center ctm-text-light" data-bs-toggle="collapse" data-bs-target="#twoFA-settings">
+                    <span>Two-Factor Authentication (2FA)</span>
+                    <i class="fas fa-chevron-down"></i>
                 </div>
-                <div class="form-group resume-card resume-card--left mt-0">
+                <div id="twoFA-settings" class="collapse mt-2">
                     <div class="d-flex justify-content-between align-items-center">
-                        <label for="change-password-toggle" class="flex-grow-1">Change Password</label>
+                        <span class="ctm-text-light">Enable 2FA</span>
                         <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" id="change-password-toggle" data-bs-toggle="collapse" data-bs-target="#change-password-form">
-                            <label class="form-check-label" for="change-password-toggle"></label>
+                            <input class="form-check-input" type="checkbox" id="2fa-toggle">
                         </div>
                     </div>
-                    <form id="change-password-form" class="collapse mt-2">
-                        <input type="password" id="current-password" class="form-control ctm-form mb-2" placeholder="Actual Password">
-                        <input type="password" id="new-password" class="form-control ctm-form mb-2 mb-2" placeholder="New Password">
-                        <input type="password" id="confirm-new-password" class="form-control ctm-form mb-2 mb-2" placeholder="Confirm Password">
-                        <div class="d-flex justify-content-center">
-                            <button type="submit" id="change-password-button" class="btn ctm-btn mt-2">Change Password</button>
-                        </div>
-                    </div>
-                </form>
-            </section>
-            <section class="d-flex flex-column w-75 mx-auto"> <!-- profile section -->
-                <h5 class="ctm-text-title text-center">Profile</h5>        
-                <div class="form-group d-flex justify-content-between align-items-center resume-card resume-card--right mb-0">
-                    <div class="flex-grow-1">Edit profile</div>
-                    <div id="edit-profile-pencil" class="btn ctm-btn">
-                        <i class="fas fa-pencil-alt"></i>
+                    <div id="otp-section" class="mt-2" style="display: none;">
+                        <input type="password" id="2fa-password" class="form-control ctm-text-dark mb-2" placeholder="Enter password">
+                        <button class="btn ctm-btn" id="2fa-submit">Submit</button>
                     </div>
                 </div>
-                <div class="form-group resume-card resume-card--left mt-0">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <label for="delete-profile-toggle" class="flex-grow-1">Delete Profile</label>
-                        <div id="delete-profile-btn" class="btn ctm-btn-danger" data-bs-toggle="modal" data-bs-target="#delete-profile-modal">
-                            <i class="fas fa-ban"></i>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section class="d-flex flex-column w-75 mx-auto"> <!-- blocked users section -->
-                <h5 class="ctm-text-title text-center">Blocked users</h5>        
-                <div class="form-group resume-card resume-card--right mt-0">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <label for="blocked-users-toggle" class="flex-grow-1">Show blocked users</label>
-                        <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" id="blocked-users-toggle" data-bs-toggle="collapse" data-bs-target="#blocked-users-container">
-                            <label class="form-check-label" for="blocked-users-toggle"></label>
-                        </div>
-                    </div>
-                    <div id="blocked-users-container" class="collapse mt-2">
-                        nope, not yet
-                    </div>
-                </div>
-            </section>
-        </div>
-    </div>
-</div>
+            </div>
 
-<!-- delete profile modal -->
-<div class="modal fade" id="delete-profile-modal" tabindex="-1" aria-labelledby="delete-profile-modal-label" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title ctm-text-title" id="delete-modal-label">Delete Profile</h5>
-          <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-        </div>
-         <div class="modal-body">
-            <h5>Are you sure you want to delete your profile?</h5>
-            <p>This action can't be reverted.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Cancel</button>
-          <button type="button" class="btn ctm-btn-danger">Delete</button>
-        </div>
-      </div>
-    </div>
-  </div>
-<!-- 2FA qr modal -->
-<div class="modal fade" id="2fa-qr-modal" tabindex="-1" aria-labelledby="2faQrModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title ctm-text-title" id="delete-modal-label">2FA Activation</h5>
-                <button type="button" class="close-modal close-qr-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
-            </div>
-            <div class="modal-body">
-                <div>Haz el favor de leer el QR antes de cerrar el modal que si no vamos a tener un problema</div>
-                <div class="d-flex align-items-center justify-content-center">
-                    <div class="qr"></div>
+            <!-- Change Username -->
+            <div class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center ctm-text-light" data-bs-toggle="collapse" data-bs-target="#username-settings">
+                    <span>Change Username</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div id="username-settings" class="collapse mt-2">
+                    <input type="text" id="new-username" class="form-control ctm-text-dark mb-2" placeholder="New username">
+                    <input type="password" id="username-password" class="form-control ctm-text-dark mb-2" placeholder="Enter password">
+                    <button class="btn ctm-btn" id="change-username-btn">Change Username</button>
                 </div>
             </div>
-            <div class="modal-footer d-flex align-items-center justify-content-center">
-                <button type="button" id="done-button" class="btn ctm-btn close-qr-modal" data-bs-dismiss="modal" disabled>Done!</button>
+
+            <!-- Change Email -->
+            <div class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center ctm-text-light" data-bs-toggle="collapse" data-bs-target="#email-settings">
+                    <span>Change Email</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div id="email-settings" class="collapse mt-2">
+                    <input type="email" id="new-email" class="form-control ctm-text-dark mb-2" placeholder="New email">
+                    <input type="password" id="email-password" class="form-control ctm-text-dark mb-2" placeholder="Enter password">
+                    <button class="btn ctm-btn" id="change-email-btn">Change Email</button>
+                </div>
+            </div>
+
+            <!-- Change Password -->
+            <div class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center ctm-text-light" data-bs-toggle="collapse" data-bs-target="#password-settings">
+                    <span>Change Password</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div id="password-settings" class="collapse mt-2">
+                    <input type="password" id="current-password" class="form-control ctm-text-dark mb-2" placeholder="Current password">
+                    <input type="password" id="new-password" class="form-control ctm-text-dark mb-2" placeholder="New password">
+                    <input type="password" id="confirm-password" class="form-control ctm-text-dark mb-2" placeholder="Confirm new password">
+                    <button class="btn ctm-btn" id="change-password-btn">Change Password</button>
+                </div>
+            </div>
+
+            <!-- Delete Account -->
+            <div class="list-group-item">
+                <div class="d-flex justify-content-between align-items-center text-danger" data-bs-toggle="collapse" data-bs-target="#delete-account-settings">
+                    <span>Delete Account</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
+                <div id="delete-account-settings" class="collapse mt-2">
+                    <input type="password" id="delete-password" class="form-control ctm-text-dark mb-2" placeholder="Enter password">
+                    <button class="btn ctm-btn-danger" id="delete-account-btn">Delete Account</button>
+                </div>
             </div>
         </div>
     </div>
