responsiveness fix on index

--- a/frontend/service/components/index/index.html
+++ b/frontend/service/components/index/index.html
@@ -1,17 +1,17 @@
 <div class="d-flex flex-column">
   <div class="greeting-page">
       <div class="neon-frame p-3">
-          <div class="ctm-card p-5 d-flex flex-row">
-              <div class="col d-flex flex-column">
+          <div class="ctm-card p-5 d-flex flex-column flex-md-row">
+              <div class="col d-flex flex-column me-4">
                   <h1 class="ctm-text-title">ft_transcendence</h1>
                   <h3 class="ctm-text-light mb-5">Welcome, huuman</h3>
                   <h4 class="ctm-text-light mt-auto" id="neon-text">
                     <a href="/login" class="nav-link ctm-link">please, log in to start playing</a>
                   </h4>
               </div>
-              <div class="col">
+              <div class="col d-flex flex-column align-items-center">
                   <!-- greetings card -->
-                  <div class="tv mx-4 position-relative">
+                  <div class="tv  position-relative">
                       <canvas id="greeting-bot"></canvas>
                       <canvas id="greeting-light"></canvas>
                   </div>
