--- a/frontend/service/components/index/styles.css
+++ b/frontend/service/components/index/styles.css
@@ -15,6 +15,13 @@
     width: 400px;
 }
 
+@media (max-width: 768px) {
+    .greeting-page .tv {
+        height: 200px;
+        width: 200px;
+    }
+}
+
 .tv::before {
     content: "";
     position: absolute;
