--- a/frontend/service/components/settings/styles.css
+++ b/frontend/service/components/settings/styles.css
@@ -42,3 +42,32 @@
     width: 300px;
     background-color: white;
 }
+
+.accordion-button {
+    background-color: var(--darkish) !important;
+    color: var(--light);
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: var(--dark) !important;
+    color: var(--accent);
+}
+
+.accordion-body {
+    background-color: var(--medium);
+}
+.accordion-button::after {
+/*     flex-shrink: 0;
+    width: 1.25rem;
+    height: 1.25rem;
+    margin-left: auto;
+    content: ""; */
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2384cca3'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+/*     background-repeat: no-repeat;
+    background-size: 1.25rem;
+    transition: transform .2s ease-in-out; */
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%2300F56A'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
